--- a/Salman's cv.html
+++ b/Salman's cv.html
@@ -7,7 +7,7 @@
     <body>
         <table>
             <tr>
-                <td><img  src="C:\Users\salman\Desktop\images\salman.jpg" alt="salman profile pic"   height="300" width="250"></td>
+                <td><img  src="images\salman.jpg" alt="salman profile pic"   height="300" width="250"></td>
                 <td><h1>SALMAN K</h1>
                     <p><strong>DOB :</strong>15/10/2001 <br>
                     <strong>Age :</strong>20</p>
